--- a/css/style.scss
+++ b/css/style.scss
@@ -255,16 +255,10 @@ img {
 }
 
 .deposit-30-hero {
-    // background: url('../img/deposit-100-hero__bg.jpg');
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-size: cover;
-
-
-    background: var(--dark-500);
-    //   padding: 150px 0;
-    position: relative;
-    z-index: 1;
+    background: url('../img/deposit-100.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .deposit-30-hero-gradient {
@@ -277,28 +271,6 @@ img {
     z-index: 3;
 }
 
-.deposit-30-hero-video-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    // overflow: hidden;
-
-    video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        display: block;
-        object-fit: cover;
-
-
-        z-index: 1;
-    }
-}
 
 
 .deposit-30-hero__header {
@@ -521,10 +493,11 @@ img {
 }
 
 @media (max-width: 991.98px) {
-    // .deposit-30-hero {
-    //     background: url('/img/deposit-100-hero__bg-991.png');
-    //     padding-top: 500px;
-    // }
+    .deposit-30-hero {
+        background: url('../img/deposit-100-991.jpg') var(--dark-500);
+        padding-top: 500px;
+        background-position: top 0 center;
+    }
 
     .deposit-30-about {
         padding: 70px 0;
@@ -549,10 +522,10 @@ img {
         background-size: 100% 50%;
     }
 
-    // .deposit-30-hero {
-    //     background: url('../img/deposit-100-hero__bg-767.jpg');
-    //     padding-bottom: 120px;
-    // }
+    .deposit-30-hero {
+        // background: url('../img/deposit-100-hero__bg-767.jpg');
+        background-position: center top 0 ;
+    }
 
     .deposit-30-benefits-wrapper {
         top: -80px;
@@ -619,9 +592,7 @@ img {
         padding: 0 0 70px;
     }
 
-    .deposit-30-hero {
-        padding: 70px 0 150px;
-    }
+ 
 }
 
 @media (max-width: 575.98px) {
@@ -692,10 +663,10 @@ img {
         margin-inline: unset;
     }
 
-    // .deposit-30-hero {
-    //     padding-top: 500px;
-    //     padding-bottom: 120px;
-    // }
+    .deposit-30-hero {
+        padding-top: 500px;
+        padding-bottom: 120px;
+    }
 
 
     .deposit-30-banner__header {
@@ -707,11 +678,15 @@ img {
         top: -20px;
     }
 
-    // .deposit-30-hero {
-    //     background: url('../img/deposit-100-hero__bg-575.jpg');
-    //     background-repeat: no-repeat;
-    //     background-size: cover;
-    // }
+    .deposit-30-hero {
+        background: url('../img/deposit-100-575.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center top 0;
+        padding-top: 240px;
+        padding-bottom: 10px;
+    }
+
 
     .light-blue {
         margin: 0;
@@ -727,7 +702,7 @@ img {
         bottom: -30px;
     }
 
-    .deposit-30-slide.owl-carousel .owl-item img {
+    .deposit-30-slide.owl-carousel .owl-item  {
         width: 50%;
         margin-inline: auto;
     }
@@ -744,11 +719,7 @@ img {
 }
 
 @media (max-width:375px) {
-    // .deposit-30-hero {
-    //     padding-top: 370px;
-    //     padding-bottom: 50px;
-    // }
-    
+ 
  
     .deposit-30-hero__sub-title {
         line-height:30px;
